Maybe fixes the graph on ie

--- a/share/web/css/sunriser_dayplanner.css
+++ b/share/web/css/sunriser_dayplanner.css
@@ -50,6 +50,7 @@ svg#dayplanner{
   width:calc(100% - 50px);
   border:1px solid #CCD7E2;
   margin:10px 0 0 50px;
+  overflow:hidden
 }
 .daysvgbox{
   position:relative;
